--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,22 @@ p.smaller {
   color: red;
 }
 
+
+#nav {
+  width: 100%;
+  height: 2rem;
+  background-color: #ccc;
+}
+
+#nav a {
+  font-size: 90%;
+  text-decoration: none;
+  padding-right: 2rem;
+ 
+}
+
+
+
 div#titleBanner {
   
   color: white;
@@ -46,8 +62,9 @@ div#titleBanner {
   text-align: center;
   text-shadow: 0px 8px 8px #000000;
   padding-top: 2%;
-  background-image: url(https://images.unsplash.com/photo-1578129377420-4795675e892e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1376&q=80);
+  background-image: none; /*url(https://images.unsplash.com/photo-1578129377420-4795675e892e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1376&q=80)*/
   background-size: cover;
+ 
   width: 100%;
   height: 20vh;
   background-position: center center;
@@ -57,7 +74,7 @@ div#titleBanner {
 #titleBanner h1.tp {
  font-size: 80%;
   background: none;
-
+  bottom: 10vw;
 }
 
 #titleBanner h1.black {
@@ -65,8 +82,18 @@ div#titleBanner {
    text-shadow: 0px 8px 8px #ffffff;
 }
 
+#titleBanner h4 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #000000;
+  font-size: 20%;
+  right: 0vw;
+  box-shadow: none;
+  text-shadow: 0px 0px 0px;
+}
 
-* {
+  {
   background-color: #FFF8DC;
   position: static;
 }
@@ -75,10 +102,25 @@ div#titleBanner {
   padding: 2vh;
   display: flex;
   justify-content: space-between;
-  background-color: #FFF8DC;
+  background-color: #000000;
   padding-bottom: 8vh;
   box-shadow: 0px 3px 3px rgba(0,0,0,0.7);
+  position: relative;
+  left:  0rem;
+  
 }
+
+#ingredients {font-family: 'Francois One', sans-serif;
+text-decoration: none;
+position: relative;
+left: 2rem;
+color: #ffffff;}
+#directions {font-family: 'Francois One', sans-serif;
+  text-decoration: none;
+position: relative;
+left: 2rem; color: #ffffff;}
+#equipment {font-family: 'Francois One', sans-serif; text-decoration: none; position: relative;
+left: 3rem; color: #ffffff;}
 
 #ingredients h4 {font-weight: bold;}
 
@@ -92,13 +134,19 @@ div#titleBanner {
   #recipeColumns #equipment ul 
   {
     display: none;
+    
   }
   
+
+#recipeColumns #directions ol {overflow-wrap: normal;
+}
   #recipeColumns #ingredients.show ul,
   #recipeColumns #directions.show ol, 
   #recipeColumns #equipment.show ul 
   {
     display: block;
+    font-family: 'Francois One', sans-serif;
+    
   }
 
 
@@ -123,3 +171,6 @@ div#titleBanner {
     font-size: 90%;
   }
   
+  .wrap-it{
+word-wrap: break-word;
+}
