--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ p.smaller {
   color: red;
 }
 
-
 #nav {
   width: 100%;
   height: 2rem;
@@ -49,22 +48,18 @@ p.smaller {
   font-size: 90%;
   text-decoration: none;
   padding-right: 2rem;
- 
 }
 
-
-
 div#titleBanner {
-  
   color: white;
   font-family: 'Francois One', sans-serif;
   font-size: 500%;
   text-align: center;
   text-shadow: 0px 8px 8px #000000;
   padding-top: 2%;
-  background-image: none; /*url(https://images.unsplash.com/photo-1578129377420-4795675e892e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1376&q=80)*/
+  background-image: none;
+  /*url(https://images.unsplash.com/photo-1578129377420-4795675e892e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1376&q=80)*/
   background-size: cover;
- 
   width: 100%;
   height: 20vh;
   background-position: center center;
@@ -72,14 +67,14 @@ div#titleBanner {
 }
 
 #titleBanner h1.tp {
- font-size: 80%;
+  font-size: 30%;
   background: none;
   bottom: 10vw;
 }
 
 #titleBanner h1.black {
   color: #000000;
-   text-shadow: 0px 8px 8px #ffffff;
+  text-shadow: 0px 8px 8px #ffffff;
 }
 
 #titleBanner h4 {
@@ -104,55 +99,71 @@ div#titleBanner {
   justify-content: space-between;
   background-color: #000000;
   padding-bottom: 8vh;
-  box-shadow: 0px 3px 3px rgba(0,0,0,0.7);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.7);
   position: relative;
-  left:  0rem;
-  
+  left: 0rem;
 }
 
-#ingredients {font-family: 'Francois One', sans-serif;
-text-decoration: none;
-position: relative;
-left: 2rem;
-color: #ffffff;}
-#directions {font-family: 'Francois One', sans-serif;
+#ingredients {
+  font-family: 'Francois One', sans-serif;
   text-decoration: none;
-position: relative;
-left: 2rem; color: #ffffff;}
-#equipment {font-family: 'Francois One', sans-serif; text-decoration: none; position: relative;
-left: 3rem; color: #ffffff;}
-
-#ingredients h4 {font-weight: bold;}
-
-#recipeColumns div#ingredients { flex-basis: 50%; }
-#recipeColumns div#equipment { flex-basis: 50%; }
-#recipeColumns div#directions { flex-basis: 50%; }
-
-/*columns disappear*/  
-  #recipeColumns #ingredients ul,
-  #recipeColumns #directions ol, 
-  #recipeColumns #equipment ul 
-  {
-    display: none;
-    
-  }
-  
-
-#recipeColumns #directions ol {overflow-wrap: normal;
+  position: relative;
+  left: 2rem;
+  color: #ffffff;
 }
-  #recipeColumns #ingredients.show ul,
-  #recipeColumns #directions.show ol, 
-  #recipeColumns #equipment.show ul 
-  {
-    display: block;
-    font-family: 'Francois One', sans-serif;
-    
-  }
 
+#directions {
+  font-family: 'Francois One', sans-serif;
+  text-decoration: none;
+  position: relative;
+  left: 2rem;
+  color: #ffffff;
+}
+
+#equipment {
+  font-family: 'Francois One', sans-serif;
+  text-decoration: none;
+  position: relative;
+  left: 3rem;
+  color: #ffffff;
+}
+
+#ingredients h4 {
+  font-weight: bold;
+}
+
+#recipeColumns div#ingredients {
+  flex-basis: 50%;
+}
+
+#recipeColumns div#equipment {
+  flex-basis: 50%;
+}
+
+#recipeColumns div#directions {
+  flex-basis: 50%;
+}
+
+
+#recipeColumns #directions ol {
+  overflow-wrap: normal;
+}
+
+#recipeColumns #ingredients.show ul,
+#recipeColumns #directions.show ol,
+#recipeColumns #equipment.show ul {
+  display: block;
+  font-family: 'Francois One', sans-serif;
+}
+
+#recipeColumns #ingredients ul,
+#recipeColumns #directions ol,
+#recipeColumns #equipment ul {
+  display: block;
+  font-family: 'Francois One', sans-serif;
+}
 
 @media screen and (orientation: portrait) {
-
- 
   #recipeColumns {
     padding: 1vh 2vh 2vh 2vh;
     display: block;
@@ -160,17 +171,10 @@ left: 3rem; color: #ffffff;}
 }
 
 @media screen and (orientation: landscape) and (max-width: 575px) {
-  
-
   #titleBanner {
     height: 98vh;
   }
-  
- 
   #titleBanner h1 {
     font-size: 90%;
   }
   
-  .wrap-it{
-word-wrap: break-word;
-}
